# spider

./: .gitignore  LICENSE  PLANNING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  rules.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  dev-release.yml  release.yml
scripts/: checksums.mjs  configure-updater.mjs  prepare-dev-release.mjs  prepare-dev-release.test.mjs  release-notes.mjs  release-notes.test.mjs  verify-workflow-actions.mjs
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs  updates.rs
src/components/: CardView.test.tsx  CardView.tsx  IconButton.tsx  Modal.tsx  Toolbar.tsx
src/game/: engine.test.ts  engine.ts  rng.ts  types.ts
src/persistence/: client.test.ts  client.ts  types.ts
src/styles/: app.css
src/test/: setup.ts
