[package]
name = "spider"
version = "0.1.3"
description = "Independent Spider Solitaire desktop app."
authors = ["Jay Esquivel Jr"]
license = "MIT"
repository = "https://github.com/jaysqvl/spider"
edition = "2021"

[lib]
name = "spider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
